--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <exec.mainClass>org.example.SparkWebServer</exec.mainClass>
+    <exec.mainClass>org.example.server.SparkWebServer</exec.mainClass>
   </properties>
 
   <dependencies>
